Introduction is over

--- a/presentation/src/introduction.tex
+++ b/presentation/src/introduction.tex
@@ -1,3 +1,20 @@
+\begin{frame} \frametitle{Premise}
+
+	Before we start, let us say that all of our work, included this own presentation,
+	is open sourced and available 
+	on Github:
+	
+	\begin{center}
+		\begin{figure}[H]
+			\includegraphics[width=.3\textwidth]{img/github}
+		\end{figure}
+		{\color{red} \url{https://github.com/casalinovalerio/biosys-project}}
+	\end{center}
+	\vfill
+	There is also a script to replicate our setup for future projects.
+	
+\end{frame}
+
 \begin{frame} \frametitle{Overview}
 We wanted a face recognition based authentication application that is simple, 
 yet particular. We deployed our test using:
