--- a/presentation/biosys-report.tex
+++ b/presentation/biosys-report.tex
@@ -35,8 +35,8 @@ Biometric Systems
 \author[Casalino, Vendrame, Moghaddam] 
 {
     Valerio Casalino (1916394)\inst{1} \and 
-    Mario Tobia Vendrame (matr)\inst{1} \and
-    Shahin Sabeti Moghaddam (matr)\inst{1}    
+    Mario Tobia Vendrame (1922290)\inst{1} \and
+    Shaahin Sabeti Moghaddam (1917507)\inst{1}    
 }
 \institute
 {
