Changing decisions, so changed the presentation

--- a/presentation/biosys-report.tex
+++ b/presentation/biosys-report.tex
@@ -62,7 +62,7 @@ Fall 2019
 	\section{Data-set Management}
 	\input{src/data-set-management.tex}
 
-	\section{APIs for Biometric Scanning Integration}
+	\section{Biometric Scanning Integration}
 	
 	\section{Performance Assessment}
 	
