--- a/presentation/src/introduction.tex
+++ b/presentation/src/introduction.tex
@@ -29,14 +29,14 @@ yet particular. We deployed our test using:
 	
 	\item An \textbf{API server}\footnote{Hosted by Digital Ocean: 
 	{\color{red} \url{https://www.digitalocean.com/}}} that queries the 
-	faces database and recognizes faces using the \textbf{OpenBR's 
-	tool}\footnote{OpenBR tool here: {\color{red} 
-	\url{http://openbiometrics.org/}}}.
+	faces database and recognizes faces using the \textbf{@ageitgey's 
+	tool}\footnote{Github project here: {\color{red} 
+	\url{https://github.com/ageitgey/face_recognition}}}.
 	
 	\item A \textbf{database based on Blockchain}\footnote{Implemented by 
 	Bigchaindb: {\color{red} \url{https://www.bigchaindb.com/}}} that is an
 	open source wrapper for a blockchain database that can be queried with 
-	standard SQL syntax.
+	standard SQL syntax. Implemented on the API server too.
 	
 \end{itemize}
 \end{frame}
