Added front-end slides to presentation... To be completed

--- a/presentation/biosys-report.tex
+++ b/presentation/biosys-report.tex
@@ -58,6 +58,7 @@ Fall 2019
 	\input{src/introduction.tex}	
 	
 	\section{Front-end Implementation}
+	\input{src/front-end.tex}
 
 	\section{Data-set Management}
 	\input{src/data-set-management.tex}
