Drafts for missing part in presentation

--- a/presentation/biosys-report.tex
+++ b/presentation/biosys-report.tex
@@ -64,8 +64,10 @@ Fall 2019
 	\input{src/data-set-management.tex}
 
 	\section{Biometric Scanning Integration}
+	\input{src/integration.tex}
 	
 	\section{Performance Assessment}
+	\input{src/performance.tex}
 	
 	\section{Conclusions}
 	\input{src/conclusions.tex}
