--- a/presentation/src/introduction.tex
+++ b/presentation/src/introduction.tex
@@ -50,12 +50,12 @@ yet particular. We deployed our test using:
 	(client) at (0,4) 
 	{\includegraphics[width=.11\textwidth]{img/laptop}};
 	
-	\node[inner sep=0pt, label={below:api-server.com}]
+	\node[inner sep=0pt, label={below:biosys.casalinovalerio.com}]
 	(server) at (0,0) 
 	{\includegraphics[width=.11\textwidth]{img/server}};
 	
 	\node[inner sep=0pt, label={below:node1.casalinovalerio.com}]
-	(database) at (4,0)
+	(database) at (6,0)
 	{\includegraphics[width=.09\textwidth]{img/database}};
 	
 	\draw[thick, ->] (client.south) -- node[anchor=west] {Request for auth}
