Restyling and additions to presentation
Co-authored-by: shaahin-sabeti <58465988+shaahin-sabeti@users.noreply.github.com>
Co-authored-by: TobMTV <vendrame.tobia@gmail.com>

--- a/presentation/src/conclusions.tex
+++ b/presentation/src/conclusions.tex
@@ -1,23 +1,28 @@
 \begin{frame} \frametitle{Conclusions}
 
-Greetings...
-\vfill
-Actual deployment considerations...
-\vfill
-Performance considerations...
+	It wasn't an easy project, but we did our best. At the end of it all, we 
+	learned:
+	\vfill
+	\begin{itemize}
+		\item How to gather information on standards and OS solutions available.
+		\item Deploy an actual service relying on ourselves.
+		\item How to evaluate a BS performance in an automatic way.
+	\end{itemize}
+	\vfill
+	Performance consideration here.
 
 \end{frame}
 
-\begin{frame} \frametitle{The Group}
+\begin{frame} \frametitle{Greetings from the group}
 
-This is a great ending message from chilled-capibaras!
-
-\vfill
-\begin{center}
-	\includegraphics[width=0.7\textwidth]{img/capibara}
-\end{center}
-\vfill
-
-This is a real cool catchy phrase!!
+	This is a really great ending message from the "creative" chilled-capibaras!
+	\vfill
+	\begin{center}
+		\includegraphics[width=0.7\textwidth]{img/capibara}
+	\end{center}
+	\vfill
+	\begin{center}
+		And this is a real cool catchy phrase!!
+	\end{center}
 
 \end{frame}
