--- a/presentation/src/introduction.tex
+++ b/presentation/src/introduction.tex
@@ -1,8 +1,7 @@
 \begin{frame} \frametitle{Premise}
 
-	Before we start, let us say that all of our work, included this own presentation,
-	is open sourced and available 
-	on Github:
+	Before we start, let us say that all of our work, included this own
+	presentation, is open sourced and available on Github:
 	
 	\begin{center}
 		\begin{figure}[H]
@@ -16,29 +15,31 @@
 \end{frame}
 
 \begin{frame} \frametitle{Overview}
-We wanted a face recognition based authentication application that is simple, 
-yet particular. We deployed our test using:
+	We wanted a face recognition based authentication application that is simple, 
+	yet particular. We deployed our test using:
 
-\begin{itemize}
+	\vfill
+	\begin{itemize}
 
-	\item A \textbf{web interface}\footnote{Hosted by Github Pages: 
-	{\color{red}\url{https://pages.github.com/}}} that works as a 
-	demonstrative placeholder. It gets the face with the camera, makes 
-	requests to our API server, which returns only a binary value for the 
-	success of the authentication.
+		\item A \textbf{web interface}\footnote{Hosted by Github Pages: 
+		{\color{red}\url{https://pages.github.com/}}} that works as a 
+		demonstrative placeholder. It gets the face with the camera, makes 
+		requests to our API server, which returns only a binary value for the 
+		success of the authentication.
 	
-	\item An \textbf{API server}\footnote{Hosted by Digital Ocean: 
-	{\color{red} \url{https://www.digitalocean.com/}}} that queries the 
-	faces database and recognizes faces using the \textbf{@ageitgey's 
-	tool}\footnote{Github project here: {\color{red} 
-	\url{https://github.com/ageitgey/face_recognition}}}.
+		\item An \textbf{API server}\footnote{Hosted by Digital Ocean: 
+		{\color{red} \url{https://www.digitalocean.com/}}} that queries the 
+		faces database and recognizes faces using the \textbf{@ageitgey's 
+		tool}\footnote{Github project here: {\color{red} 
+		\url{https://github.com/ageitgey/face_recognition}}}.
 	
-	\item A \textbf{database based on Blockchain}\footnote{Implemented by 
-	Bigchaindb: {\color{red} \url{https://www.bigchaindb.com/}}} that is an
-	open source wrapper for a blockchain database that can be queried with 
-	standard SQL syntax. Implemented on the API server too.
+		\item A \textbf{database based on Blockchain}\footnote{Implemented by 
+		Bigchaindb: {\color{red} \url{https://www.bigchaindb.com/}}} that is an
+		open source wrapper for a blockchain database that can be queried with 
+		standard SQL syntax. Implemented on the API server too.
 	
-\end{itemize}
+	\end{itemize}
+	\vfill
 \end{frame}
 
 \begin{frame} \frametitle{Overview scheme\footnote{Icons are licensed under 
