Little edits on presentation

--- a/presentation/src/performance.tex
+++ b/presentation/src/performance.tex
@@ -5,7 +5,7 @@
 	\vfill
 
 	\begin{block}{Use the script (to edit)}
-		./test.sh -d /path/to/test-faces
+		./test /path/to/test-faces
 	\end{block}
 	
 	For more info on how the script works, just look at 
