--- a/presentation/src/performance.tex
+++ b/presentation/src/performance.tex
@@ -10,7 +10,8 @@
 	
 	For more info on how the script works, just look at 
 	it\footnote{Script here: 
-	{\color{red} \url{this-is.temp}}}, it is open source!
+	{\color{red} \url{https://tinyurl.com/wo3rk8s}}}, 
+	it is open source!
 
 	\vfill
 	
@@ -19,14 +20,81 @@
 
 \end{frame}
 
-\begin{frame} \frametitle{Testing approach}
+\begin{frame} \frametitle{Testing approach (Training)}
 
-	We sent a 
+	We trained the system registering 8 people:
+	
+	\begin{center}
+ 		\begin{tabular}{||c | c | c | c||} 
+			 \hline
+			 	\textbf{Real name} & 
+			 	\textbf{id} & 
+			 	\textbf{\#samples in gallery} & 
+			 	\textbf{\#probes} 
+			 \\ [0.5ex] 
+			 \hline\hline
+			 	Bill Gates & 
+			 	bill & 
+			 	\~60 & 
+			 	\~10 
+			 \\ 
+			 \hline
+			 	Barak Obama & 
+			 	doubleb & 
+			 	\~60 & 
+			 	\~10 
+			 \\
+			 \hline
+			 	Margot Robbie & 
+				harley & 
+			 	\~60 & 
+			 	\~10 
+			 \\
+			 \hline
+			 	Miriam Leone & 
+			 	mlion & 
+			 	\~60 & 
+			 	\~10 
+			 \\
+			 \hline
+			 	Scarlett Johansson & 
+			 	redlucy & 
+			 	\~60 & 
+			 	\~10 
+			\\
+			 \hline
+			 	Robert Downey Jr & 
+				robman & 
+			 	\~60 & 
+			 	\~10 
+			 \\
+			 \hline
+			 	Tom Hardy & 
+			 	tommy & 
+			 	\~60 & 
+			 	\~10
+			\\
+			 \hline
+			 	Mark Zuckerberg & 
+			 	zuck & 
+			 	\~60 & 
+			 	\~10
+			\\ [1ex] 
+ 			\hline
+		\end{tabular}
+	\end{center}	
 
 \end{frame}
 
-\begin{frame} \frametitle{How it performed}
-
-	Really well, it is a revolutionary project!
+\begin{frame} \frametitle{Testing approach (Querying)}
+	
+	Then, we collected 10 other random pictures from the same 
+	people, plus 10 pictures for other 5 people:
+	
+	\begin{itemize}
+		\item Jimmy Fellon
+		\item Donald Trump
+		\item 
+	\end{itemize}
 
 \end{frame}
