New slide on testing

--- a/presentation/src/performance.tex
+++ b/presentation/src/performance.tex
@@ -94,7 +94,18 @@
 	\begin{itemize}
 		\item Jimmy Fellon
 		\item Donald Trump
-		\item 
+		\item Tim Cook
+		\item Jeff Bezos
+		\item Alfred Hitchcock
 	\end{itemize}
+	
+	To be quick, we used yet another script\footnote{This one: } to upload
+	pictures to be queried. 
+
+\end{frame}
+
+\begin{frame} \frametitle{Results}
+
+	
 
 \end{frame}
