Edits to presentation

--- a/presentation/src/performance.tex
+++ b/presentation/src/performance.tex
@@ -1,25 +1,3 @@
-\begin{frame} \frametitle{How we tested}
-
-	We tested our solution with a custom script.
-	
-	\vfill
-
-	\begin{block}{Use the script (to edit)}
-		./test /path/to/test-faces
-	\end{block}
-	
-	For more info on how the script works, just look at 
-	it\footnote{Script here: 
-	{\color{red} \url{https://tinyurl.com/wo3rk8s}}}, 
-	it is open source!
-
-	\vfill
-	
-	We let the script run on the same server for the longest
-	time possible, until we could obtain a reasonable evaluation.
-
-\end{frame}
-
 \begin{frame} \frametitle{Testing approach (Training)}
 
 	We trained the system registering 8 people:
@@ -101,11 +79,19 @@
 	
 	To be quick, we used yet another script\footnote{This one: } to upload
 	pictures to be queried. 
+	
+	\begin{block}{Use the script}
+		./test /path/to/test-faces http://server.com
+	\end{block}
 
 \end{frame}
 
 \begin{frame} \frametitle{Results}
 
+	We let the script run and the results can be seen in this spreadsheet:
 	
+	\begin{center}
+		{ \color{red} \url{} }
+	\end{center}
 
 \end{frame}
