--- a/presentation/src/introduction.tex
+++ b/presentation/src/introduction.tex
@@ -21,8 +21,7 @@
 	\vfill
 	\begin{itemize}
 
-		\item A \textbf{web interface}\footnote{Hosted by Github Pages: 
-		{\color{red}\url{https://pages.github.com/}}} that works as a 
+		\item A \textbf{web interface} that works as a 
 		demonstrative placeholder. It gets the face with the camera, makes 
 		requests to our API server, which returns only a binary value for the 
 		success of the authentication.
