--- a/presentation/src/performance.tex
+++ b/presentation/src/performance.tex
@@ -13,50 +13,50 @@
 			 \hline\hline
 			 	Bill Gates & 
 			 	bill & 
-			 	\~60 & 
-			 	\~10 
+			 	60 & 
+			 	10 
 			 \\ 
 			 \hline
 			 	Barak Obama & 
 			 	doubleb & 
-			 	\~60 & 
-			 	\~10 
+			 	60 & 
+			 	10 
 			 \\
 			 \hline
 			 	Margot Robbie & 
 				harley & 
-			 	\~60 & 
-			 	\~10 
+			 	60 & 
+			 	10 
 			 \\
 			 \hline
 			 	Miriam Leone & 
 			 	mlion & 
-			 	\~60 & 
-			 	\~10 
+			 	60 & 
+			 	10 
 			 \\
 			 \hline
 			 	Scarlett Johansson & 
 			 	redlucy & 
-			 	\~60 & 
-			 	\~10 
+			 	60 & 
+			 	10 
 			\\
 			 \hline
 			 	Robert Downey Jr & 
 				robman & 
-			 	\~60 & 
-			 	\~10 
+			 	60 & 
+			 	10 
 			 \\
 			 \hline
 			 	Tom Hardy & 
 			 	tommy & 
-			 	\~60 & 
-			 	\~10
+			 	60 & 
+			 	10
 			\\
 			 \hline
 			 	Mark Zuckerberg & 
 			 	zuck & 
-			 	\~60 & 
-			 	\~10
+			 	60 & 
+			 	10
 			\\ [1ex] 
  			\hline
 		\end{tabular}
@@ -77,7 +77,7 @@
 		\item Alfred Hitchcock
 	\end{itemize}
 	
-	To be quick, we used yet another script\footnote{This one: } to upload
+	To be quick, we used yet another script\footnote{This one: {\color{red} \url{https://git.io/JvsQv}}} to upload
 	pictures to be queried. 
 	
 	\begin{block}{Use the script}
@@ -86,12 +86,22 @@
 
 \end{frame}
 
-\begin{frame} \frametitle{Results}
+\begin{frame} \frametitle{Results (raw)}
 
 	We let the script run and the results can be seen in this spreadsheet:
 	
 	\begin{center}
-		{ \color{red} \url{} }
+		\begin{figure}[H]
+			\includegraphics[width=.3\textwidth]{img/sheets}
+		\end{figure}
+		{\color{red} \url{https://tinyurl.com/rbk4dnc}}
 	\end{center}
+	\vfill
+	
+	
 
+\end{frame}
+
+\begin{frame} \frametitle{Results (Description)}
+	vubub
 \end{frame}
