More descriptive introduction

--- a/presentation/src/introduction.tex
+++ b/presentation/src/introduction.tex
@@ -41,6 +41,19 @@
 	\vfill
 \end{frame}
 
+\begin{frame} \frametitle{Description}
+
+	We built a face recognition service based on \textbf{identification}, 
+	which matches the probe with an \textbf{open set} approach.
+	\vfill
+	The gallery is stored in a \textbf{Blockchain database} and queried each 
+	time, but one of the nodes is stored in the same place in which the 
+	request is made,	that makes the whole process \textbf{faster}.
+	\vfill
+	Each match, if there is one, is returned with a \textbf{distance} parameter.  
+
+\end{frame}
+
 \begin{frame} \frametitle{Overview scheme\footnote{Icons are licensed under 
 	CC-BY 4.0. {\color{red} \url{https://fontawesome.com/license}}}}
 
