Reviewing performance part

--- a/presentation/src/performance.tex
+++ b/presentation/src/performance.tex
@@ -81,7 +81,7 @@
 	pictures to be queried. 
 	
 	\begin{block}{Use the script}
-		./test /path/to/test-faces http://server.com
+		./test /path/to/test-faces http://server.com /path/to/results.cvs
 	\end{block}
 
 \end{frame}
