Performance section updated in presentation

--- a/presentation/src/performance.tex
+++ b/presentation/src/performance.tex
@@ -97,11 +97,26 @@
 		{\color{red} \url{https://tinyurl.com/rbk4dnc}}
 	\end{center}
 	\vfill
-	
-	
 
 \end{frame}
 
 \begin{frame} \frametitle{Results (Description)}
-	vubub
+
+	We analyzed the results with a python script\footnote{{\color{red} 
+	\url{https://git.io/Jvsp6}}}, and obtained these FAR and FRR:
+	
+	\vfill
+	\begin{center}
+		\begin{figure}[H]
+			\includegraphics[width=.7\textwidth]{img/far-frr}
+		\end{figure}
+	\end{center}
+	\vfill
+
+\end{frame}
+
+\begin{frame} \frametitle{Results (Description)}
+
+	We surely had more to test, because seems too god to be true...
+
 \end{frame}
