Working on performance in presentation

--- a/presentation/src/performance.tex
+++ b/presentation/src/performance.tex
@@ -87,14 +87,13 @@
 \end{frame}
 
 \begin{frame} \frametitle{Results (raw)}
-
-	We let the script run and the results can be seen in this spreadsheet:
 	
 	\begin{center}
+		We let the script run and the results can be seen in this spreadsheet:
 		\begin{figure}[H]
 			\includegraphics[width=.3\textwidth]{img/sheets}
 		\end{figure}
-		{\color{red} \url{https://tinyurl.com/rbk4dnc}}
+		{\color{red} \url{https://tinyurl.com/rbk4dnc}}	
 	\end{center}
 	\vfill
 
@@ -117,6 +116,15 @@
 
 \begin{frame} \frametitle{Results (Description)}
 
+	\vfill
 	We surely had more to test, because seems too god to be true...
+	\vfill
+	That's why, instead of use our home-made data set, we used the
+	Labeled Faces in the Wild\footnote{{\color{red} 
+	\url{http://vis-www.cs.umass.edu/lfw/}}}.
+	\vfill
+	This time, 
+	
+	
 
 \end{frame}
