Code quality fixes

--- a/presentation/src/conclusions.tex
+++ b/presentation/src/conclusions.tex
@@ -9,7 +9,9 @@
 		\item How to evaluate a BS performance in an automatic way.
 	\end{itemize}
 	\vfill
-	Performance consideration here.
+	The software that we used was clearly designed to minimize the False 
+	Acceptance Rate penalizing the False Rejection Rate, but overall it 
+	was simple to understand and simple to use compared to other solutions.
 
 \end{frame}
 
