--- a/presentation/src/performance.tex
+++ b/presentation/src/performance.tex
@@ -135,7 +135,7 @@
 \begin{frame} \frametitle{LFW gallery Results (Description)}
 
 	We analyzed the results with a similar version of the precedent 
-	python script\footnote{{\color{red} \url{https://git.io/Jvsp6}}}, 
+	python script\footnote{{\color{red} \url{https://git.io/JvGB8}}}, 
 	and obtained these FAR and FRR:
 	
 	\vfill
