--- a/presentation/src/front-end.tex
+++ b/presentation/src/front-end.tex
@@ -1,6 +1,6 @@
 \begin{frame} \frametitle{The web Application}
 
-	The web application perform the authentication as follows:
+	The web application performs the authentication as follows:
 	
 	\vfill
 
@@ -12,8 +12,8 @@
 	 	server\footnote{{ \color{red} \url{https://biosys.casalinovalerio.com}}},
 	 	which can register the face, or match the face with an already registered
 	 	user.
-	 	\item In the end, you can be registered, or you can get the authentication
-	 	response status.
+	 	\item In the end, you can decide to be registered or you can query the
+	 	system looking for a match of your face.
 	\end{itemize}
 	 
 	\vfill
