--- a/presentation/src/performance.tex
+++ b/presentation/src/performance.tex
@@ -117,7 +117,7 @@
 \begin{frame} \frametitle{LFW Results (raw)}
 
 	\vfill
-	We surely had more to test... That's why, instead of use our home-made 
+	We surely had more to test... That's why, instead of using our home-made 
 	data set, we used the \textbf{Labeled Faces in the Wild}\footnote{
 	{\color{red} \url{http://vis-www.cs.umass.edu/lfw/}}}. This time, 
 	we used 75 registered users and 150 impostors, getting these results:
